# mem-alloc

./: .clang-format  CMakeLists.txt  README.md
include/allocators/: pool_allocator.h
src/: pool_allocator.c
test/: bench.c  test.c
